# BinScale3D

./: README.md  __init__.py  bin_scale.py  requirements.txt  setup.cfg
example_confgis/: crop_only.yaml  xeno_9.yaml  xeno_round2.yaml
example_configs/: convert_to_8bit.yaml  rescale_intensity.yaml  xeno_round8.5.yaml  xeno_round8.yaml
src/binscale/: __init__.py  converter.py  cropper.py  helpers.py  run.py  scaler.py
