[metadata]
# replace with your username:
name = binscale3d
version = 0.0.1
author = Yaroslav Zharov
author_email = mart.slaaf@gmail.com
description = Cropper, scaler, and binner of 3D files
long_description = file: README.md
long_description_content_type = text/markdown
url =https://github.com/DL4XRayTomoImaging-KIT/BinScale3D
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    numpy
    dask
    scikit-image
    scikit-learn
    tifffile
    flexpand @ git+https://github.com/MartSlaaf/FileListExpander
    tqdm
    scipy
    einops
    joblib
    univread @ git+https://github.com/DL4XRayTomoImaging-KIT/UnivRead3D

[options.packages.find]
where = src

console_scripts =
    binscale = src.bin_scale
